--- a/index.html
+++ b/index.html
@@ -1,9 +1,74 @@
 <!DOCTYPE html>
-   <head>
-	<meta charset="UTF-8>
-	<title>Inicio</title>
-   </head>
-   <body>
-	<h1>Bienvenido</h1>
-   </body>
+<html>
+<head>
+ <meta charset="utf-8">   
+ <link rel="stylesheet" href="css/main.css">
+ <title>Inicio</title>
+</head>
+
+<body>
+  <header>
+    <nav class="cuentos">      
+        <a href="index.html">Inicio</a>
+        <a href="escarabajo.html">El escarabajo de oro</a>
+        <a href="coloquio.html">El coloquio de Monos y Una</a>
+        <a href="silencio.html">silencio</a>
+        <a href="poder.html">El poder de las palabras</a>
+        <a href="conversacion.html">Conversacion de Eiros y Charmion</a>
+   </nav>
+  </header>
+
+  <div class="contenedorprincipal">
+  
+    <div class="bio">
+
+      <div >
+        <div align = "center">
+            <img class="fotoalan" src="imagenes/edgar.jpg" alt="Edgar Allan Poe">
+        </div>
+      </div>
+      <h1 class="edgar">Edgar Allan Poe</h1>
+    <p><strong>Edgar Allan Poe</strong> (Boston, Estados Unidos, 19 de enero de 1809-Baltimore, Estados Unidos, 7 de octubre de 1849) fue un escritor, 
+      poeta, crítico y periodista romántico estadounidense, generalmente reconocido como uno de los maestros universales del relato corto, 
+      del cual fue uno de los primeros practicantes en su país. Fue renovador de la novela gótica, 
+      recordado especialmente por sus cuentos de terror. 
+      Considerado el inventor del relato detectivesco, contribuyó asimismo con varias obras al género emergente de la ciencia ficción.
+       Por otra parte, fue el primer escritor estadounidense de renombre que intentó hacer de la escritura 
+       <a href="glosario.html"><strong>su modus vivendi</strong> </a>  
+      , lo que tuvo para él lamentables consecuencias.</p>
+    <p>Fue bautizado como Edgar Poe en Boston, Massachusetts, y sus padres murieron cuando era niño.
+        Fue recogido por un matrimonio adinerado de Richmond, Virginia, Frances y John Allan, aunque nunca 
+        fue adoptado oficialmente. Pasó un curso académico en la Universidad de Virginia y posteriormente 
+        se enroló, también por breve tiempo, en el ejército. Sus relaciones con los Allan se rompieron en esa
+         época, debido a las continuas desavenencias con su padrastro, quien a menudo desoyó sus peticiones de 
+         ayuda y acabó desheredándolo. 
+       Su carrera literaria se inició con un libro de poemas, Tamerlane and Other Poems (1827).
+    </p>
+   </div>
+</div>
+
+<div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://bolanosmigueldiego-github-io.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+  </body>
 </html>
+
+
