--- a/silencio.html
+++ b/silencio.html
@@ -28,96 +28,35 @@
       
 
         <pre class="cuentooro">
-           Fábula
-           Ευδουσιν δ’ όρκων κορυφαˆ τε καˆ φαράγες
-           Πρώονες τε καˆ χαράδραι
-           (Las crestas montañosas duermen; los valles,
-           los riscos y las grutas están en silencio.)
-            (ALCMÁN [60(10),646])
-           Escúchame —dijo el Demonio, apoyando la mano en mi cabeza—. La región de que
-           hablo es una lúgubre región en Libia, a orillas del río Zaire. Y allá no hay ni calma ni
-           silencio.
-           Las aguas del río están teñidas de un matiz azafranado y enfermizo, y no fluyen hacia
-           el mar, sino que palpitan por siempre bajo el ojo purpúreo del sol, con un movimiento
-           tumultuoso y convulsivo. A lo largo de muchas millas, a ambos lados del legamoso lecho
-           del río, se tiende un pálido desierto de gigantescos nenúfares. Suspiran entre sí en esa
-           soledad y tienden hacia el cielo sus largos y pálidos cuellos, mientras inclinan a un lado y
-           otro sus cabezas sempiternas. Y un rumor indistinto se levanta de ellos, como el correr del
-           agua subterránea. Y suspiran entre sí.
-           Pero su reino tiene un límite, el límite de la oscura, horrible, majestuosa floresta. Allí,
-           como las olas en las Hébridas, la maleza se agita continuamente. Pero ningún viento surca
-           el cielo. Y los altos árboles primitivos oscilan eternamente de un lado a otro con un potente
-           resonar. Y de sus altas copas se filtran, gota a gota, rocíos eternos. Y en sus raíces se
-           retuercen, en un inquieto sueño, extrañas flores venenosas. Y en lo alto, con un agudo
-           sonido susurrante, las nubes grises corren por siempre hacia el oeste, hasta rodar en
-           cataratas sobre las ígneas paredes del horizonte. Pero ningún viento surca el cielo. Y en las
-           orillas del río Zaire no hay ni calma ni silencio.
-           Era de noche y llovía, y al caer era lluvia, pero después de caída era sangre. Y yo
-           estaba en la marisma entre los altos nenúfares, y la lluvia caía en mi cabeza, y los nenúfares
-           suspiraban entre sí en la solemnidad de su desolación.
-           Y de improviso levantóse la luna a través de la fina niebla espectral y su color era
-           carmesí. Y mis ojos se posaron en una enorme roca gris que se alzaba a la orilla del río,
-           iluminada por la luz de la luna. Y la roca era gris, y espectral, y alta; y la roca era gris. En
-           su faz había caracteres grabados en la piedra, y yo anduve por la marisma de nenúfares
-           hasta acercarme a la orilla, para leer los caracteres en la piedra. Pero no pude descifrarlos.
-           Y me volvía a la marisma cuando la luna brilló con un rojo más intenso, y al volverme y
-           mirar otra vez hacia la roca y los caracteres vi que los caracteres decían DESOLACIÓN.
-           Y miré hacia arriba y en lo alto de la roca había un hombre, y me oculté entre los
-           nenúfares para observar lo que hacía aquel hombre. Y el hombre era alto y majestuoso y
-           estaba cubierto desde los hombros a los pies con la toga de la antigua Roma. Y su silueta
-           era indistinta, pero sus facciones eran las facciones de una deidad, porque el palio de la
-           noche, y la luna, y la niebla, y el rocío, habían dejado al descubierto las facciones de su
-           cara. Y su frente era alta y pensativa, y sus ojos brillaban de preocupación; y en las escasas 
-           arrugas de sus mejillas leí las fábulas de la tristeza, del cansancio, del disgusto de la
-           humanidad, y el anhelo de estar solo.
-           Y el hombre se sentó en la roca, apoyó la cabeza en la mano y contempló la desolación.
-           Miró los inquietos matorrales, y los altos árboles primitivos, y más arriba el susurrante
-           cielo, y la luna carmesí. Y yo me mantuve al abrigo de los nenúfares, observando las
-           acciones de aquel hombre. Y el hombre tembló en la soledad, pero la noche transcurría, y él
-           continuaba sentado en la roca.
-           Y el hombre distrajo su atención del cielo y miró hacia el melancólico río Zaire y las
-           amarillas, siniestras aguas y las pálidas legiones de nenúfares. Y el hombre escuchó los
-           suspiros de los nenúfares y el murmullo que nacía de ellos. Y yo me mantenía oculto y
-           observaba las acciones de aquel hombre. Y el hombre tembló en la soledad; pero la noche
-           transcurría y él continuaba sentado en la roca.
-           Entonces me sumí en las profundidades de la marisma, vadeando a través de la soledad
-           de los nenúfares, y llamé a los hipopótamos que moran entre los pantanos en las
-           profundidades de la marisma. Y los hipopótamos oyeron mi llamada y vinieron con los
-           behemot al pie de la roca y rugieron sonora y terriblemente bajo la luna. Y yo me mantenía
-           oculto y observaba las acciones de aquel hombre. Y el hombre tembló en la soledad; pero la
-           noche transcurría y él continuaba sentado en la roca.
-           Entonces maldije los elementos con la maldición del tumulto, y una espantosa
-           tempestad se congregó en el cielo, donde antes no había viento. Y el cielo se tornó lívido
-           con la violencia de la tempestad, y la lluvia azotó la cabeza del hombre, y las aguas del río
-           se desbordaron, y el río atormentado se cubría de espuma, y los nenúfares alzaban
-           clamores, y la floresta se desmoronaba ante el viento, y rodaba el trueno, y caía el rayo, y la
-           roca vacilaba en sus cimientos. Y yo me mantenía oculto y observaba las acciones de aquel
-           hombre. Y el hombre tembló en la soledad; pero la noche transcurría y él continuaba
-           sentado.
-           Entonces me encolericé y maldije, con la maldición del silencio, el río y los nenúfares y
-           el viento y la floresta y el cielo y el trueno y los suspiros de los nenúfares. Y quedaron
-           malditos y se callaron. Y la luna cesó de trepar hacia el cielo, y el trueno murió, y el rayo
-           no tuvo ya luz, y las nubes se suspendieron inmóviles, y las aguas bajaron a su nivel y se
-           estacionaron, y los árboles dejaron de balancearse, y los nenúfares ya no suspiraron y no se
-           oyó más el murmullo que nacía de ellos, ni la menor sombra de sonido en todo el vasto
-           desierto ilimitado. Y miré los caracteres de la roca, y habían cambiado; y los caracteres
-           decían: SILENCIO.
-           Y mis ojos cayeron sobre el rostro de aquel hombre, y su rostro estaba pálido. Y
-           bruscamente alzó la cabeza, que apoyaba en la mano y, poniéndose de pie en la roca,
-           escuchó. Pero no se oía ninguna voz en todo el vasto desierto ilimitado, y los caracteres
-           sobre la roca decían: SILENCIO. Y el hombre se estremeció y, desviando el rostro, huyó a
-           toda carrera, al punto que cesé de verlo.
-           Pues bien, hay muy hermosos relatos en los libros de los Magos, en los melancólicos
-           libros de los Magos, encuadernados en hierro. Allí, digo, hay admirables historias del cielo
-           y de la tierra, y del potente mar, y de los Genios que gobiernan el mar, y la tierra, y el
-           majestuoso cielo. También había mucho saber en las palabras que pronunciaban las Sibilas,
-           y santas, santas cosas fueron oídas antaño por las sombrías hojas que temblaban en torno a
-           Dodona. Pero, tan cierto como que Alá vive, digo que la fábula que me contó el Demonio,
-           que se sentaba a mi lado a la sombra de la tumba, es la más asombrosa de todas. Y cuando 
-           el Demonio concluyó su historia, se dejó caer, en la cavidad de la tumba y rió. Y yo no
-           pude reírme con él, y me maldijo porque no reía. Y el lince que eternamente mora en la
-           tumba salió de ella y se tendió a los pies del Demonio, y lo miró fijamente a la cara. 
-        </pre>
+  "Listen to me," said the Demon, as he placed his hand upon my head. "There is a spot upon this accursed earth which thou hast never yet beheld And if by any chance thou hast beheld it, it must have been in one of those vigorous dreams which come like the Simoon upon the brain of the sleeper who hath lain down to sleep among the forbidden sunbeams --among the sunbeams, I say, which slide from off the solemn columns of the melancholy temples in the wilderness. The region of which I speak is a dreary region in Libya, by the borders of the river Zaire. And there is no quiet there, nor silence. 
+
+    "The waters of the river have a saffron and sickly hue --and they flow not onwards to the sea, but palpitate forever and forever beneath the red eye of the sun with a tumultuous and convulsive motion. For many miles on either side of the river's oozy bed is a pale desert of gigantic water-lilies. They sigh one unto the other in that solitude, and stretch towards the heaven their long ghastly necks, and nod to and fro their everlasting heads. And there is an indistinct murmur which cometh out from among them like the rushing of subterrene water. And they sigh one unto the other. 
+
+    "But there is a boundary to their realm --the boundary of the dark, horrible, lofty forest. There, like the waves about the Hebrides, the low underwood is agitated continually. But there is no wind throughout the heaven. And the tall primeval trees rock eternally hither and thither with a crashing and mighty sound. And from their high summits, one by one, drop everlasting dews. And at the roots strange poisonous flowers lie writhing in perturbed slumber. And overhead, with a rustling and loud noise, the grey clouds rush westwardly forever, until they roll, a cataract, over the fiery wall of the horizon. But there is no wind throughout the heaven. And by the shores of the river Zaire there is neither quiet nor silence. 
+
+    "It was night, and the rain fell; and, falling, it was rain, but, having fallen, it was blood. And I stood in the morass among the tall lilies, and the rain fell upon my head --and the lilies sighed one unto the other in the solemnity of their desolation. 
+
+    "And, all at once, the moon arose through the thin ghastly mist, and was crimson in color. And mine eyes fell upon a huge grey rock which stood by the shore of the river, and was litten by the light of the moon. And the rock was grey, and ghastly, and tall, --and the rock was grey. Upon its front were characters engraven in the stone; and I walked through the morass of water-lilies, until I came close unto the shore, that I might read the characters upon the stone. But I could not decypher the characters. And I was going back into the morass, when the moon shone with a fuller red, and I turned and looked again upon the rock, and upon the characters --and the characters were DESOLATION. 
+
+    "And I looked upwards, and there stood a man upon the summit of the rock, and I hid myself among the water-lilies that I might discover the actions of the man. And the man was tall and stately in form, and was wrapped up from his shoulders to his feet in the toga of old Rome. And the outlines of his figure were indistinct --but his features were the features of a Deity; for the mantle of the night, and of the mist, and of the moon, and of the dew, had left uncovered the features of his face. And his brow was lofty with thought, and his eye wild with care; and, in the few furrows upon his cheek I read the fables of sorrow, and weariness, and disgust with mankind, and a longing after solitude. And the moon shone upon his face, and upon the features of his face, and oh! they were more beautiful than the airy dreams which hovered about the souls of the daughters of Delos! 
+
+    "And the man sat down upon the rock, and leaned his head upon his hand, and looked out upon the desolation. He looked down into the low unquiet shrubbery, and up into the tall primeval trees, and up higher at the rustling heaven, and into the crimson moon. And I lay close within shelter of the lilies, and observed the actions of the man. And the man trembled in the solitude --but the night waned and he sat upon the rock. 
+
+    "And the man turned his attention from the heaven, and looked out upon the dreary river Zaire, and upon the yellow ghastly waters, and upon the pale legions of the water-lilies. And the man listened to the sighs of the water-lilies, and of the murmur that came up from among them. And I lay close within my covert and observed the actions of the man. And the man trembled in the solitude --but the night waned and he sat upon the rock. 
+
+    "Then I went down into the recesses of the morass, and waded afar in among the wilderness of the lilies, and called unto the hippopotami which dwelt among the fens in the recesses of the morass. And the hippopotami heard my call, and came, with the behemoth, unto the foot of the rock, and roared loudly and fearfully beneath the moon. And I lay close within my covert and observed the actions of the man. And the man trembled in the solitude --but the night waned and he sat upon the rock. 
+
+    "Then I cursed the elements with the curse of tumult; and a frightful tempest gathered in the heaven where before there had been no wind. And the heaven became livid with the violence of the tempest --and the rain beat upon the head of the man --and the floods of the river came down --and the river was tormented into foam --and the water-lilies shrieked within their beds --and the forest crumbled before the wind --and the thunder rolled, --and the lightning fell --and the rock rocked to its foundation. And I lay close within my covert and observed the actions of the man. And the man trembled in the solitude -- but the night waned and he sat upon the rock. 
+
+    "Then I grew angry and cursed, with the curse of silence, the river, and the lilies, and the wind, and the forest, and the heaven, and the thunder, and the sighs of the water-lilies. And they became accursed and were still. And the moon ceased to totter in its pathway up the heaven --and the thunder died away --and the lightning did not flash --and the clouds hung motionless --and the waters sunk to their level and remained --and the trees ceased to rock --and the water-lilies sighed no more --and the murmur was heard no longer from among them, nor any shadow of sound throughout the vast illimitable desert. And I looked upon the characters of the rock, and they were changed --and the characters were SILENCE. 
+
+    "And mine eyes fell upon the countenance of the man, and his countenance was wan with terror. And, hurriedly, he raised his head from his hand, and stood forth upon the rock, and listened. But there was no voice throughout the vast illimitable desert, and the characters upon the rock were SILENCE. And the man shuddered, and turned his face away, and fled afar off, and I beheld him no more." 
+
+                *      *      *      *      *      *      *      *      *      *      *      *
+
+    Now there are fine tales in the volumes of the Magi --in the iron-bound, melancholy volumes of the Magi. Therein, I say, are glorious histories of the Heaven, and of the Earth, and of the mighty Sea --and of the Genii that over-ruled the sea, and the earth, and the lofty heaven. There was much lore too in the sayings which were said by the sybils; and holy, holy things were heard of old by the dim leaves that trembled around Dodona --but, as Allah liveth, that fable which the Demon told me as he sat by my side in the shadow of the tomb, I hold to be the most wonderful of all! And as the Demon made an end of his story, he fell back within the cavity of the tomb and laughed. And I could not laugh with the Demon, and he cursed me because I could not laugh. And the lynx which dwelleth forever in the tomb, came out therefrom, and lay down at the feet of the Demon, and looked at him steadily in the face. 
+
+	</pre>
    </div>
 
    <div>
