--- a/poder.html
+++ b/poder.html
@@ -27,118 +27,73 @@
   <div class="bio">
     
         <pre class="cuentooro" >
-               Oinos.—Perdona, Agathos, la flaqueza de un espíritu al que acaban de brotarle las alas
-               de la inmortalidad.
-               Agathos.—Nada has dicho, Oinos mío, que requiera ser perdonado. Ni siquiera aquí el
-               conocimiento es cosa de intuición. En cuanto a la sabiduría, pide sin reserva a los ángeles
-               que te sea concedida.
-               Oinos. —Pero yo imaginé que en esta existencia todo me sería dado a conocer al
-               mismo tiempo, y que alcanzaría así la felicidad por conocerlo todo.
-               Agathos.—¡Ah, la felicidad no está en el conocimiento, sino en su adquisición! La
-               beatitud eterna consiste en saber más y más; pero saberlo todo sería la maldición de un
-               demonio.
-               Oinos.—El Altísimo, ¿no lo sabe todo?
-               Agathos.—Eso (puesto que es el Muy Bienaventurado) debe ser aún la única cosa
-               desconocida hasta para Él.
-               Oinos. —Sin embargo, puesto que nuestro saber aumenta de hora en hora, ¿no llegarán
-               por fin a ser conocidas todas las cosas?
-               Agathos.—¡Contempla las distancias abismales! Trata de hacer llegar tu mirada a la
-               múltiple perspectiva de las estrellas, mientras erramos lentamente entre ellas... ¡Más allá,
-               siempre más allá! Aun la visión espiritual, ¿no se ve detenida por las continuas paredes de
-               oro del universo, las paredes constituidas por las miríadas de esos resplandecientes cuerpos
-               que el mero número parece amalgamar en una unidad?
-               Oinos.—Claramente percibo que la infinitud de la materia no es un sueño.
-               Agathos.—No hay sueños en el Aidenn3
-               , pero se susurra aquí que la única finalidad de
-               esta infinitud de materia es la de proporcionar infinitas fuentes donde el alma pueda calmar
-               la sed de saber que jamás se agotará en ella, ya que agotarla sería extinguir el alma misma.
-               Interrógame, pues, Oinos mío, libremente y sin temor. ¡Ven!, dejaremos a nuestra izquierda
-               la intensa armonía de las Pléyades, lanzándonos más allá del trono a las estrelladas praderas
-               allende Orión, donde, en lugar de violetas, pensamientos y trinitarias, hallaremos macizos
-               de soles triples y tricolores.
-               Oinos.—Y ahora, Agathos, mientras avanzamos, instrúyeme. ¡Háblame con los acentos
-               familiares de la tierra! No he comprendido lo que acabas de insinuar sobre los modos o los
-               procedimientos de aquello que, mientras éramos mortales, estábamos habituados a llamar
-               Creación. ¿Quieres decir que el Creador no es Dios?
-               Agathos. —Quiero decir que la Deidad no crea.
-               Oinos.—¡Explícate!
-               Agathos.—Solamente creó en el comienzo. Las aparentes criaturas que en el universo
-               surgen ahora perpetuamente a la existencia sólo pueden ser consideradas como el resultado
-               mediato o indirecto, no como el resultado directo o inmediato del poder creador divino.
-               Oinos. —Entre los hombres, Agathos mío, esta idea sería considerada altamente
-               herética.
-               Agathos. —Entre los ángeles, Oinos mío, se sabe que es sencillamente la verdad.
-               Oinos.—Alcanzo a comprenderte hasta este punto: que ciertas operaciones de lo que
-               
-               3 Edén, en una forma caprichosa propia de Poe, (N. del T.)
-               denominamos Naturaleza o leyes naturales darán lugar, bajo ciertas condiciones, a aquello
-               que tiene todas las apariencias de creación. Muy poco antes de la destrucción final de la
-               tierra recuerdo que se habían efectuado afortunados experimentos, que algunos filósofos
-               denominaron torpemente creación de animálculos.
-               Agathos.—Los casos de que hablas fueron ejemplos de creación secundaria, de la única
-               especie de creación que hubo jamás desde que la primera palabra dio existencia a la
-               primera ley.
-               Oinos.—Los mundos estrellados que surgen hora a hora en los cielos, procedentes de
-               los abismos del no ser, ¿no son, Agathos, la obra inmediata de la mano del Rey?
-               Agathos—Permíteme, Oinos, que trate de llevarte paso a paso a la concepción a que
-               aludo. Bien sabes que, así como ningún pensamiento perece, todo acto determina infinitos
-               resultados. Movíamos las manos, por ejemplo, cuando éramos moradores de la tierra, y al
-               hacerlo hacíamos vibrar la atmósfera que las rodeaba. La vibración se extendía
-               indefinidamente hasta impulsar cada partícula del aire de la tierra, que desde entonces y
-               para siempre era animado por aquel único movimiento de la mano. Los matemáticos de
-               nuestro globo conocían bien este hecho. Sometieron a cálculos exactos los efectos
-               producidos por el fluido por impulsos especiales, hasta que les fue fácil determinar en qué
-               preciso período un impulso de determinada extensión rodearía el globo, influyendo (para
-               siempre) en cada átomo de la atmósfera circundante. Retrogradando, no tuvieron dificultad
-               en determinar el valor del impulso original partiendo de un efecto dado bajo condiciones
-               determinadas. Ahora bien, los matemáticos que vieron que los resultados de cualquier
-               impulso dado eran interminables, y que una parte de dichos resultados podía medirse
-               gracias al análisis algebraico, así como que la retrogradación no ofrecía dificultad, vieron al
-               mismo tiempo que este análisis poseía en sí mismo la capacidad de un avance indefinido;
-               que no existían límites concebibles a su avance y aplicabilidad, salvo en el intelecto de
-               aquel que lo hacía avanzar o lo aplicaba. Pero en este punto nuestros matemáticos se
-               detuvieron.
-               Oinos.—¿Y por qué, Agathos, hubieran debido continuar?
-               Agathos. —Porque había, más allá, consideraciones del más profundo interés. De lo
-               que sabían era posible deducir que un ser de una inteligencia infinita, para quien la
-               perfección del análisis algebraico no guardara secretos, podría seguir sin dificultad cada
-               impulso dado al aire, y al éter a través del aire, hasta sus remotas consecuencias en las
-               épocas más infinitamente remotas. Puede, ciertamente, demostrarse que cada uno de estos
-               impulsos dados al aire influyen sobre cada cosa individual existente en el universo, y ese
-               ser de infinita inteligencia que hemos imaginado, podría seguir las remotas ondulaciones
-               del impulso, seguirlo hacia arriba y adelante en sus influencias sobre todas las partículas de
-               toda la materia, hacia arriba y adelante, para siempre en sus modificaciones de las formas
-               antiguas; o, en otras palabras, en sus nuevas creaciones... hasta que lo encontrara,
-               regresando como un reflejo, después de haber chocado —pero esta vez sin influir— en el
-               trono de la Divinidad. Y no sólo podría hacer eso un ser semejante, sino que en cualquier
-               época, dado un cierto resultado (supongamos que se ofreciera a su análisis uno de esos
-               innumerables cometas), no tendría dificultad en determinar, por retrogradación analítica, a
-               qué impulso original se debía. Este poder de retrogradación en su plenitud y perfección
-               absolutas, esta facultad de relacionar en cualquier época, cualquier efecto a cualquier
-               causa, es por supuesto prerrogativa única de la Divinidad; pero en sus restantes y múltiples
-               grados, inferiores a la perfección absoluta, ese mismo poder es ejercido por todas las
-               huestes de las inteligencias angélicas. 
-               Oinos.—Pero tú hablas tan sólo de impulsos en el aire.
-               Agathos.—Al hablar del aire me refería meramente a la tierra, pero mi afirmación
-               general se refiere a los impulsos en el éter, que, al penetrar, y ser el único que penetra todo
-               el espacio, es así el gran medio de la creación.
-               Oinos.—Entonces, ¿todo movimiento, de cualquier naturaleza, crea?
-               Agathos.—Así debe ser; pero una filosofía verdadera ha enseñado hace mucho que la
-               fuente de todo movimiento es el pensamiento, y que la fuente de todo pensamiento es...
-               Oinos. —Dios.
-               Agathos.—Te he hablado, Oinos, como a una criatura de la hermosa tierra que pereció
-               hace poco, de impulsos sobre la atmósfera de esa tierra.
-               Oinos. —Sí.
-               Agathos.—Y mientras así hablaba, ¿no cruzó por tu mente algún pensamiento sobre el
-               poder físico de las palabras? Cada palabra, ¿no es un impulso en el aire?
-               Oinos. —¿Pero por qué lloras, Agathos... y por qué, por qué tus alas se pliegan
-               mientras nos cernimos sobre esa hermosa estrella, la más verde y, sin embargo, la más
-               terrible que hemos encontrado en nuestro vuelo? Sus brillantes flores parecen un sueño de
-               hadas... pero sus fieros volcanes semejan las pasiones de un turbulento corazón.
-               Agathos.—¡Y así es... así es! Esta estrella tan extraña... hace tres siglos que, juntas las
-               manos y arrasados los ojos, a los pies de mi amada, la hice nacer con mis frases
-               apasionadas. ¡Sus brillantes flores son mis más queridos sueños no realizados, y sus
-               furiosos volcanes son las pasiones del más turbulento e impío corazón! </pre>
+OINOS. Pardon, Agathos, the weakness of a spirit new-fledged with immortality!
+
+AGATHOS. You have spoken nothing, my Oinos, for which pardon is to be demanded. Not even here is knowledge thing of intuition. For wisdom, ask of the angels freely, that it may be given!
+
+OINOS. But in this existence, I dreamed that I should be at once cognizant of all things, and thus at once be happy in being cognizant of all.
+
+AGATHOS. Ah, not in knowledge is happiness, but in the acquisition of knowledge! In for ever knowing, we are for ever blessed; but to know all were the curse of a fiend.
+
+OINOS. But does not The Most High know all?
+
+AGATHOS. That (since he is The Most Happy) must be still the one thing unknown even to Him.
+
+OINOS. But, since we grow hourly in knowledge, must not at last all things be known?
+
+AGATHOS. Look down into the abysmal distances!- attempt to force the gaze down the multitudinous vistas of the stars, as we sweep slowly through them thus- and thus- and thus! Even the spiritual vision, is it not at all points arrested by the continuous golden walls of the universe?- the walls of the myriads of the shining bodies that mere number has appeared to blend into unity?
+
+OINOS. I clearly perceive that the infinity of matter is no dream.
+
+AGATHOS. There are no dreams in Aidenn- but it is here whispered that, of this infinity of matter, the sole purpose is to afford infinite springs, at which the soul may allay the thirst to know, which is for ever unquenchable within it- since to quench it, would be to extinguish the soul's self. Question me then, my Oinos, freely and without fear. Come! we will leave to the left the loud harmony of the Pleiades, and swoop outward from the throne into the starry meadows beyond Orion, where, for pansies and violets, and heart's- ease, are the beds of the triplicate and triple- tinted suns.
+
+OINOS. And now, Agathos, as we proceed, instruct me!- speak to me in the earth's familiar tones. I understand not what you hinted to me, just now, of the modes or of the method of what, during mortality, we were accustomed to call Creation. Do you mean to say that the Creator is not God?
+
+AGATHOS. I mean to say that the Deity does not create.
+
+OINOS. Explain.
+
+AGATHOS. In the beginning only, he created. The seeming creatures which are now, throughout the universe, so perpetually springing into being, can only be considered as the mediate or indirect, not as the direct or immediate results of the Divine creative power.
+
+OINOS. Among men, my Agathos, this idea would be considered heretical in the extreme.
+
+AGATHOS. Among angels, my Oinos, it is seen to be simply true.
+
+OINOS. I can comprehend you thus far- that certain operations of what we term Nature, or the natural laws, will, under certain conditions, give rise to that which has all the appearance of creation. Shortly before the final overthrow of the earth, there were, I well remember, many very successful experiments in what some philosophers were weak enough to denominate the creation of animalculae.
+
+AGATHOS. The cases of which you speak were, in fact, instances of the secondary creation- and of the only species of creation which has ever been, since the first word spoke into existence the first law.
+
+OINOS. Are not the starry worlds that, from the abyss of nonentity, burst hourly forth into the heavens- are not these stars, Agathos, the immediate handiwork of the King?
+
+AGATHOS. Let me endeavor, my Oinos, to lead you, step by step, to the conception I intend. You are well aware that, as no thought can perish, so no act is without infinite result. We moved our hands, for example, when we were dwellers on the earth, and, in so doing, gave vibration to the atmosphere which engirdled it. This vibration was indefinitely extended, till it gave impulse to every particle of the earth's air, which thenceforward, and for ever, was actuated by the one movement of the hand. This fact the mathematicians of our globe well knew. They made the special effects, indeed, wrought in the fluid by special impulses, the subject of exact calculation- so that it became easy to determine in what precise period an impulse of given extent would engirdle the orb, and impress (for ever) every atom of the atmosphere circumambient. Retrograding, they found no difficulty, from a given effect, under given conditions, in determining the value of the original impulse. Now the mathematicians who saw that the results of any given impulse were absolutely endless- and who saw that a portion of these results were accurately traceable through the agency of algebraic analysis- who saw, too, the facility of the retrogradation- these men saw, at the same time, that this species of analysis itself, had within itself a capacity for indefinite progress- that there were no bounds conceivable to its advancement and applicability, except within the intellect of him who advanced or applied it. But at this point our mathematicians paused.
+
+OINOS. And why, Agathos, should they have proceeded?
+
+AGATHOS. Because there were some considerations of deep interest beyond. It was deducible from what they knew, that to a being of infinite understanding- one to whom the perfection of the algebraic analysis lay unfolded- there could be no difficulty in tracing every impulse given the air- and the ether through the air- to the remotest consequences at any even infinitely remote epoch of time. It is indeed demonstrable that every such impulse given the air, must, in the end, impress every individual thing that exists within the universe;- and the being of infinite understanding- the being whom we have imagined- might trace the remote undulations of the impulse- trace them upward and onward in their influences upon all particles of an matter- upward and onward for ever in their modifications of old forms- or, in other words, in their creation of new- until he found them reflected- unimpressive at last- back from the throne of the Godhead. And not only could such a thing do this, but at any epoch, should a given result be afforded him- should one of these numberless comets, for example, be presented to his inspection- he could have no difficulty in determining, by the analytic retrogradation, to what original impulse it was due. This power of retrogradation in its absolute fulness and perfection- this faculty of referring at all epochs, all effects to all causes- is of course the prerogative of the Deity alone- but in every variety of degree, short of the absolute perfection, is the power itself exercised by the whole host of the Angelic intelligences.
+
+OINOS. But you speak merely of impulses upon the air.
+
+AGATHOS. In speaking of the air, I referred only to the earth; but the general proposition has reference to impulses upon the ether- which, since it pervades, and alone pervades all space, is thus the great medium of creation.
+
+OINOS. Then all motion, of whatever nature, creates?
+
+AGATHOS. It must: but a true philosophy has long taught that the source of all motion is thought- and the source of all thought is-
+
+OINOS. God.
+
+AGATHOS. I have spoken to you, Oinos, as to a child of the fair Earth which lately perished- of impulses upon the atmosphere of the Earth.
+
+OINOS. You did.
+
+AGATHOS. And while I thus spoke, did there not cross your mind some thought of the physical power of words? Is not every word an impulse on the air?
+
+OINOS. But why, Agathos, do you weep- and why, oh why do your wings droop as we hover above this fair star- which is the greenest and yet most terrible of all we have encountered in our flight? Its brilliant flowers look like a fairy dream- but its fierce volcanoes like the passions of a turbulent heart.
+
+AGATHOS. They are!- they are! This wild star- it is now three centuries since, with clasped hands, and with streaming eyes, at the feet of my beloved- I spoke it- with a few passionate sentences- into birth. Its brilliant flowers are the dearest of all unfulfilled dreams, and its raging volcanoes are the passions of the most turbulent and unhallowed of hearts.
+
+
+	  
+	</pre>
 
    </div>
 
